--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam eaque, eius explicabo aut, voluptas consectetur tenetur quod vero asperiores, tempore, facilis hic. Aut asperiores odit earum cumque quas voluptas repellendus.</h1>
 </body>
 </html>
